# blurRelax

./: BlurRelax.mod  CMakeLists.txt  README.md  blurRelax.cpp  mayaConfigure.bat  meson.build
.github/workflows/: main.yml
scripts/BlurRelax/: menu.py
src/: blurRelaxNode.cpp  blurRelaxNode.h  fastMayaRelax.cpp  fastMayaRelax.h  fastRelax.cpp  fastRelax.h  pluginRegister.cpp
